<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2e2e2e"
    android:orientation="vertical"
    tools:context=".activity.DetalleProductoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/purple_500"
                app:navigationIcon="@drawable/ic_volver_atras"
                app:title="Detalle Producto"
                app:titleTextColor="@color/ic_launcher_background" />
        </com.google.android.material.appbar.AppBarLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="8dp"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgProductoDetalle"
                            android:layout_width="375dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:src="@drawable/pc" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvNameProductoDetalle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="10dp"
                                android:fontFamily="@font/san_francisco"
                                android:text="COMPU GAMER I7"
                                android:textColor="#000"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/txtNameMedida"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="25dp"
                                    android:fontFamily="@font/san_francisco"
                                    android:text="Medida : "
                                    android:textColor="#000"
                                    android:textSize="12sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tvMedidaProductoDetalle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="3dp"
                                    android:fontFamily="@font/san_francisco"
                                    android:text="@string/medida_producto"
                                    android:textColor="#000"
                                    android:textSize="12sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/txtNameStock"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="90dp"
                                    android:fontFamily="@font/san_francisco"
                                    android:text="Stock: "
                                    android:textColor="#000"
                                    android:textSize="12sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tvStockProductoDetalle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/san_francisco"
                                    android:text="@string/cantidad_producto"
                                    android:textColor="#000"
                                    android:textSize="12sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/txtNamePrecioProducto"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="16dp"
                                    android:layout_marginEnd="10dp"
                                    android:fontFamily="@font/san_francisco"
                                    android:text="Precio : "
                                    android:textColor="#000"
                                    android:textSize="13sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tvPrecioProductoDetalle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginTop="16dp"
                                    android:layout_marginEnd="10dp"
                                    android:layout_toEndOf="@+id/txtNamePrecioProducto"
                                    android:fontFamily="@font/san_francisco"
                                    android:text="@string/precio_producto"
                                    android:textColor="#000"
                                    android:textSize="13sp"
                                    android:textStyle="bold" />
                            </RelativeLayout>

                            <TextView
                                android:id="@+id/tvDescripcionProductoDetalle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginBottom="10dp"
                                android:fontFamily="@font/san_francisco"
                                android:justificationMode="inter_word"
                                android:text="@string/descripcion_producto"
                                android:textColor="#000"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                        <!-- Buttons -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnAgregarCarrito"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="4dp"
                                android:drawableEnd="@drawable/ic_add_shop"
                                android:textSize="11sp"
                                android:text="@string/add_shop" />

                            <LinearLayout
                                android:id="@+id/contenedor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/btnComprar"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="#2B0067"
                                    android:drawableEnd="@drawable/ic_money"
                                    android:textSize="11sp"
                                    android:text="@string/comprar_p" />

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>